# soylent-tracker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml  todo-invites.md
.github/workflows/: deploy.yml
docs/: branding-style-guide.md  future-usa-products.md
lib/: amazon_checker.py  auth.py  config.py  file_lock.py  helpers.py  history.py  http_client.py  notifications.py  products.json  products.py  registry.py  scheduler.py  soylent_checker.py  state.py  users.py
static/css/: style.css
static/js/: otp.js  wallpaper.js
templates/: admin_dashboard.html  admin_login.html  admin_verify.html  base.html  buy.html  dashboard.html  login.html  verify.html
templates/partials/: admin_tool_result.html  admin_users.html  buy_card.html  flag_ca.html  icon_external.html  logo.html  notif_toggle.html  otp_form.html  product_card.html  toggle_btn.html
tests/: test_basics.py  test_checker_integration.py  test_checkers.py  test_history.py  test_notifications.py  test_registry.py  test_routes.py  test_scheduler.py
